IRtest_out/99_bin_search.err
irs/99_bin_search.ll:91:1: error: expected instruction opcode
next_entry76:
^
1 error generated.
